# ibay_rental_dashboard_mv

./: .dockerignore  .gitignore  AUDIT.md  Dockerfile  IbayRentalDashboard.spec  PROJECT_TREE.txt  README.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt  scrapy.cfg
dashboard/: app.py
reports/: ibay_fixture_characterization.md
scripts/: build_portable.ps1
src/ibay_rentals/: __init__.py  classification.py  cli.py  desktop.py  parsing.py  pipeline.py  preprocessing.py  schemas.py  scraping.py  settings.py  sources.py  validation.py
src/ibay_rentals/scrapers/: __init__.py  property_mv.py
src/ibay_rentals/spiders/: __init__.py  ibay_spider.py
tests/: conftest.py  test_dashboard.py  test_desktop.py  test_parsing.py  test_preprocessing.py  test_property_mv_scraper.py  test_sources.py  test_spider.py  test_validation.py
tests/fixtures/: synthetic_listing_detail.html  synthetic_unpriced_sale.html  synthetic_usd_listing_detail.html
