[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibay-rental-dashboard"
version = "1.0.0"
description = "A small, reproducible iBay and Property.mv rental-listing pipeline and dashboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "pandas",
    "pyarrow",
    "scrapy",
    "streamlit",
    "plotly",
    "openpyxl",
    "requests",
    "urllib3",
]

[project.optional-dependencies]
dev = ["pytest"]
packaging = ["pyinstaller>=6.0"]

[project.scripts]
ibay-rentals = "ibay_rentals.cli:main"

[project.gui-scripts]
ibay-rentals-desktop = "ibay_rentals.desktop:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
